# rtu_mirea_vuc_schedule_telegram_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  update_packages.sh
telegram_bot/: __main__.py  _logging.py  callbacks.py  dispatcher.py  loader.py  revision.sh  settings.py  states.py  ui_commands.py
telegram_bot/alembic/: env.py
telegram_bot/alembic/versions/: 20231019132721_cdc0c674830f_init.py
telegram_bot/db/: models.py  session.py  utils.py
telegram_bot/handlers/: utils.py
telegram_bot/handlers/help/: keyboards.py  main.py
telegram_bot/handlers/issue/: keyboards.py  main.py
telegram_bot/handlers/platoon/: keyboards.py  main.py
telegram_bot/handlers/schedule/: __init__.py  base.py  current_week.py  keyboards.py  next_week.py  schedule.py
telegram_bot/handlers/session/: __init__.py  main.py
telegram_bot/handlers/user_settings/: base.py  keyboards.py  main.py
telegram_bot/middlewares/: posthog.py
telegram_bot/schemas/: __init__.py  user.py  user_settings.py
telegram_bot/templates/: platoons.html  user_settings.html  week_schedule.html
